--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
-flask
-flask-session
-flask-sqlalchemy
-SQLalchemy
-wheel
-psycopg2
-requests
+certifi==2019.3.9
+chardet==3.0.4
+Click==7.0
+Flask==1.0.2
+Flask-Session==0.3.1
+Flask-SQLAlchemy==2.3.2
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+psycopg2==2.8.2
+requests==2.21.0
+SQLAlchemy==1.3.3
+urllib3==1.24.1
+Werkzeug==0.15.2
